SERVER-21293 Add network timeout to the query fetcher

The query fecther currently does not pass timeout and because of this if
the config server is black-holed a command may never complete.