src/mongo/s/catalog/legacy/catalog_manager_legacy.cpp
@@ -445,7 +445,9 @@ StatusWith<ShardDrainingStatus> CatalogManagerLegacy::removeShard(OperationConte
 
 StatusWith<OpTimePair<DatabaseType>> CatalogManagerLegacy::getDatabase(OperationContext* txn,
                                                                        const std::string& dbName) {
-    invariant(nsIsDbOnly(dbName));
+    if (!NamespaceString::validDBName(dbName)) {
+        return {ErrorCodes::InvalidNamespace, stream() << dbName << " is not a valid db name"};
+    }
 
     // The two databases that are hosted on the config server are config and admin
     if (dbName == "config" || dbName == "admin") {
